fix icon align for 2 columns layout

--- a/src/stylesheets/partials/_monster.scss
+++ b/src/stylesheets/partials/_monster.scss
@@ -948,6 +948,10 @@
         padding-bottom: 0;
       }
 
+      .trait-icon {
+        vertical-align: bottom;
+      }
+
       // hr {
       //   &:first-of-type + * {
       //     margin-top: 0.5em;
